syntax = "proto3";

option java_package = "Proto";

message Vec2D {
    double x = 1;
    double y = 2;
}

message Polygon { 
    repeated Vec2D vertices = 1; // Vec2D here is used as point2d
}

message Static_Data {
    Polygon play_area = 1; // play ground formed by Top/bottom touch lines + left/right goal lines
    Polygon penalty_area = 2;
    Polygon center_circle = 3; // use a Polygon to represent circle
    Polygon center_line = 4; // consider a line as a Polygon (length 2 point_array) as well
    Polygon cross_bar = 5; // a line object as well, once ball pass this bar, u score, yikes!
    int32 num_robots = 6;
}


// basic control packet
message Control {
    Vec2D velocity = 1;
    double angular_velocity = 2;
    double dribbler_pwr = 3;
    double kicker_pwr = 4;
    double chippping_pwr = 5;
}

// data to be send to share info to each robot for distributed computation
message Data_Send {
    Vec2D ball_location = 1; 
    Vec2D ball_velocity = 2;
    repeated Vec2D yellow_robot_locations = 3;
    repeated Vec2D blue_robot_locations = 4;
    repeated double yellow_robot_orientations = 5;
    repeated double blue_robot_orientations = 6;
    repeated Vec2D yellow_robot_velocities = 7;
    repeated Vec2D blue_robot_velocities = 8;
}

// user-defined control packet 
message Custom_Control {
    string name = 1;
    repeated double numerical_params = 2;
}

// user-defined highlevel task to be assigned to a robot
message Custom_Task {
    string name = 1;
    repeated Control ctrl_params = 2;
    repeated double numerical_params = 3;
    repeated string str_params = 4;
}

// request data from a robot
message Data_Request {
    string name = 1;
    repeated Control ctrl_data = 2;
    repeated double numerical_data = 3;
    repeated string str_data = 4;
}


message Remote_Commands {
    Control ctrl = 1; // basic control
    Data_Send cdata = 2; /* from the robot's perspective, sharedData is the cloud data bc this code runs in the "cloud"
                          or public data shared among all robots */
    Custom_Control cust_ctrl = 3; // custom control
    Custom_Task task = 4; // highlevel task
    Data_Request request = 5; // AI can request data to fetch from a robot
    Static_Data to_init = 6; // static field object to be initalized on program start
}

